# CPLHW

./: LICENSE  README.md
0-practice/: CMakeLists.txt  Primeplus.c  Yanghui.c  alphabet-plus.c  d-to-t-balanced-ternary.c  frog.cpp  joseph-ring.c  limit.c  palin.c  scanf.c  selection-sort.c  t-to-d-balanced-ternary.c  trace.c
1-types-io/: CMakeLists.txt  Guess-the-number.c  TEST2.c  admin.c  circle.c  mol.c  sphere.c  test.c
2-if-for-array/: Booktesting.c  CMakeLists.txt  Judge-prime.c  Natural-base-2.c  blackhole.c  leap-year.c  loop.c  min-of-a-set-of-numbers.c  min-of-three.c  min-of-two.c  natural-base.c  primecount.c  single.c  standup.c  sum-of-series.c
3-for-a-while/: CMakeLists.txt  binart-search.c  bubble.c  palindrome-1.c  star-pyramid.c
4-loops/: CMakeLists.txt  Insertion-Sort.c  bit.c  bitt.c  game-of-life.c  get-f.c  llk.c  merge.c  mine.c
5-function/: CMakeLists.txt  ab-prime.c  candle-2.c  candle.c  converter-2.c  mem.c  next-permutation.c  pair.c  radix.c  test-1.c  test-2.c  test-3.c  wordpuzzle.c
GoodModel/: CMakeLists.txt  boolmultiply.c  circular-linked-list.c  sudoku.c
