cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 17)

add_executable(selection-sort selection-sort.c)
add_executable(t-to-d-balanced-ternary t-to-d-balanced-ternary.c)
add_executable(d-to-t-balanced-ternary d-to-t-balanced-ternary.c)
add_executable(Primeplus Primeplus.c)
add_executable(joseph-ring joseph-ring.c)
add_executable(scanf scanf.c)
add_executable(palin palin.c)
add_executable(alphabet-plus alphabet-plus.c
)
add_executable(trace trace.c)
add_executable(Yanghui Yanghui.c)
add_executable(limit limit.c)
