cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 17)
add_executable(min-of-two min-of-two.c)
add_executable(min-of-three min-of-three.c)
add_executable(loop loop.c)
add_executable(leap-year leap-year.c)
add_executable(min-of-a-set-of-numbers min-of-a-set-of-numbers.c)
add_executable(sum-of-series sum-of-series.c)
add_executable(Booktesting Booktesting.c)
add_executable(Judge-prime Judge-prime.c)
add_executable(natural-base natural-base.c)
add_executable(Natural-base-2 Natural-base-2.c)
add_executable(primecount primecount.c)
add_executable(single single.c)
add_executable(blackhole blackhole.c)
add_executable(standup standup.c)