cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 17)
add_executable(test-1 test-1.c)
add_executable(test-2 test-2.c)
add_executable(test-3 test-3.c)
add_executable(mem mem.c)
add_executable(wordpuzzle wordpuzzle.c)
add_executable(candle candle.c)
add_executable(candle-2 candle-2.c)

add_executable(next-permutation next-permutation.c)
add_executable(ab-prime ab-prime.c)
add_executable(converter-2 converter-2.c)
add_executable(radix radix.c)
add_executable(pair pair.c)